# dotsy

./: .env.example  .gitignore  .npmignore  .pre-commit-config.yaml  .typos.toml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  DOTSY_CODE_EXPLAINED.docx  DOTSY_CODE_EXPLAINED.txt  README.md  action.yml  cleanup.py  commit.py  commit_push.py  dotsy-acp.spec  dotsy.bat  final.py  final_push.py  fix_css.py  flake.nix  package.json  push2.py  push3.py  push_api_cmd.py  push_docs.py  push_fix.py  push_fix2.py  pyproject.toml  test_crush_integration.py  verify_models.py  vibe-acp.spec
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: feature-request.yml
.github/workflows/: build-and-upload.yml  ci.yml  release.yml
distribution/zed/: extension.toml
docs/: README.md
docs/models/: README.md  adding-providers.md  model-config.md
dotsy/: __init__.py  sample_config.toml  whats_new.md
dotsy/acp/: acp_agent_loop.py  entrypoint.py  utils.py
dotsy/cli/: cli.py  clipboard.py  commands.py  entrypoint.py  history_manager.py  terminal_setup.py
dotsy/core/: __init__.py  agent_loop.py  bayesian_reasoning.py  config.py  middleware.py  output_formatters.py  programmatic.py  system_prompt.py  trusted_folders.py  types.py  utils.py
scripts/: bump_version.py  install.bat  install.sh  prepare_release.py
skills/claude-architect/: SKILL.md
skills/claude-code-review/: SKILL.md
skills/claude-teacher/: SKILL.md
tests/: conftest.py  test_agent_auto_compact.py  test_agent_backend.py  test_agent_observer_streaming.py  test_agent_stats.py  test_agent_tool_call.py  test_agents.py  test_cli_programmatic_preload.py  test_history_manager.py  test_message_id.py  test_middleware.py  test_reasoning_content.py  test_system_prompt.py  test_tagged_text.py  test_ui_external_editor.py  test_ui_input_history.py
tests/acp/: conftest.py  test_acp.py  test_bash.py  test_compact_session_updates.py  test_content.py  test_initialize.py  test_multi_session.py  test_new_session.py  test_read_file.py  test_search_replace.py  test_set_mode.py  test_set_model.py  test_write_file.py
tests/autocompletion/: test_file_indexer.py  test_fuzzy.py  test_path_completer_fuzzy.py  test_path_completer_recursive.py  test_path_completion_controller.py  test_path_prompt_transformer.py  test_slash_command_controller.py  test_ui_chat_autocompletion.py
tests/backend/: test_backend.py
tests/cli/: test_clipboard.py  test_external_editor.py  test_no_markup_static.py  test_question_app.py  test_ui_clipboard_notifications.py  test_ui_session_resume.py
tests/core/: test_agents.py  test_config_load_dotenv.py  test_config_resolution.py  test_trusted_folders.py
tests/mock/: mock_backend_factory.py  mock_entrypoint.py  utils.py
tests/onboarding/: test_run_onboarding.py  test_ui_onboarding.py
tests/playground/: .gitkeep
tests/session/: test_session_loader.py  test_session_logger.py  test_session_migration.py
tests/skills/: conftest.py  test_manager.py  test_models.py  test_parser.py
tests/snapshots/: base_snapshot_test_app.py  test_ui_snapshot_ask_user_question.py  test_ui_snapshot_basic_conversation.py  test_ui_snapshot_code_block_horizontal_scrolling.py  test_ui_snapshot_modes.py  test_ui_snapshot_plan_offer.py  test_ui_snapshot_question_app.py  test_ui_snapshot_reasoning_content.py  test_ui_snapshot_release_update_notification.py  test_ui_snapshot_session_resume.py  test_ui_snapshot_whats_new.py
tests/stubs/: fake_backend.py  fake_client.py  fake_tool.py
tests/tools/: test_ask_user_question.py  test_bash.py  test_grep.py  test_invoke_context.py  test_manager_get_tool_config.py  test_mcp.py  test_task.py  test_ui_bash_execution.py
tests/update_notifier/: test_do_update.py  test_filesystem_update_cache_repository.py  test_github_update_gateway.py  (+4 more)
(+275 files in other folders)
